--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
         <h3><i class="fas fa-play-circle"></i> شاهد الفيديو التوضيحي:</h3>
         <div class="video-container">
           <iframe
-            src="https://www.youtube.com/embed/30RTdV7zdQc"
+            src="https://www.youtube.com/embed/r8j7jOBOPws"
             title="شرح الدخول واستخدام بوابة الطالب في English Castle"
             allowfullscreen
             loading="lazy"
