--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         <h3><i class="fas fa-play-circle"></i> شاهد الفيديو التوضيحي:</h3>
         <div class="video-container">
           <iframe
-            src="https://www.youtube.com/embed/YOUR_PAYMENT_VIDEO_ID"
+            src="https://www.youtube.com/embed/wjzwpoKBUl4&feature"
             title="شرح آلية الدفع في English Castle"
             allowfullscreen
             loading="lazy"
