--- a/index.html
+++ b/index.html
@@ -579,19 +579,19 @@
                 <a href="tel:+905550551109"
                   ><span dir="ltr">+90 555 055 11 09</span></a
                 >
-                - For Arabic - Turkish - English
+                - Arabic - Turkish - English
               </li>
               <li>
                 <a href="tel:+905550551103"
                   ><span dir="ltr">+90 555 055 11 03</span></a
                 >
-                - For Arabic - Turkish - English
+                - Arabic - Turkish - English
               </li>
               <li>
                 <a href="tel:+905550551146"
                   ><span dir="ltr">+90 555 055 11 46</span></a
                 >
-                - For Arabic - Turkish - English
+                - Arabic - Turkish - English
               </li>
               <li>
                 <a href="tel:+905013346900"
