--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
                 <a href="tel:+905013346900"
                   ><span dir="ltr">+90 501 334 69 00</span></a
                 >
-                - For Arabic - Turkish - English
+                - Arabic - Turkish - English
               </li>
             </ul>
           </li>
