--- a/index.html
+++ b/index.html
@@ -573,22 +573,22 @@
         </p>
         <ul>
           <li>
-            <i class="fas fa-phone-volume"></i> <strong>شؤون الطلاب :</strong>
+            <i class="fab fa-whatsapp"></i> <strong>شؤون الطلاب :</strong>
             <ul>
               <li>
-                <a href="tel:+905550551109"
+                <a href="https://wa.me/905550551109"
                   ><span dir="ltr">+90 555 055 11 09</span></a
                 >
                 - Arabic - Turkish - English
               </li>
               <li>
-                <a href="tel:+905550551103"
+                <a href="https://wa.me/905550551103"
                   ><span dir="ltr">+90 555 055 11 03</span></a
                 >
                 - Arabic - Turkish - English
               </li>
               <li>
-                <a href="tel:+905550551146"
+                <a href="https://wa.me/905550551146"
                   ><span dir="ltr">+90 555 055 11 46</span></a
                 >
                 - Arabic - Turkish - English
@@ -599,12 +599,6 @@
             <i class="fas fa-envelope"></i> <strong>البريد الإلكتروني:</strong>
             <a href="mailto:studentaffairs@engcastle.com"
               >studentaffairs@engcastle.com</a
-            >
-          </li>
-          <li>
-            <i class="fab fa-whatsapp"></i> <strong>واتساب (اختياري):</strong>
-            <a href="https://wa.me/905550551103" target="_blank"
-              ><span dir="ltr"> +905550551103 </span></a
             >
           </li>
           <li>
