--- a/index.html
+++ b/index.html
@@ -608,16 +608,16 @@
           </li>
           <li class="social-icons">
             <i class="fas fa-share-alt"></i> <strong>تابعنا على:</strong>
-            <a href="#" target="_blank" title="Facebook"
+            <a href="https://www.facebook.com/engcastle" target="_blank" title="Facebook"
               ><i class="fab fa-facebook-f"></i
             ></a>
-            <a href="#" target="_blank" title="Twitter"
+            <a href="https://x.com/engcastletr" target="_blank" title="Twitter"
               ><i class="fab fa-twitter"></i
             ></a>
-            <a href="#" target="_blank" title="Instagram"
+            <a href="https://www.instagram.com/englishcastle.en" target="_blank" title="Instagram"
               ><i class="fab fa-instagram"></i
             ></a>
-            <a href="#" target="_blank" title="LinkedIn"
+            <a href="https://www.linkedin.com/company/english-castle" target="_blank" title="LinkedIn"
               ><i class="fab fa-linkedin-in"></i
             ></a>
           </li>
